--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,25 +1,57 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarEexample">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'UpdateHistory1', root_path, class: 'navbar-brand' %>
+    </div>
+
+    <div class="collapse navbar-collapse" id="navbarEexample">
+      <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
+          <li><%= link_to "#{current_user.username}さん", user_path(current_user) %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<% if user_signed_in? %>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Homes</h1>
+  <h1>Listing Homes</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @homes.each do |home| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= link_to 'Show', home %></td>
-        <td><%= link_to 'Edit', edit_home_path(home) %></td>
-        <td><%= link_to 'Destroy', home, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @homes.each do |home| %>
+        <tr>
+          <td><%= link_to 'Show', home %></td>
+          <td><%= link_to 'Edit', edit_home_path(home) %></td>
+          <td><%= link_to 'Destroy', home, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Home', new_home_path %>
+  <br>
+
+  <%= link_to 'New Home', new_home_path %>
+
+<% else %>
+
+  <p><%= link_to 'ログイン', new_user_session_path %>もしくは<%= link_to '会員登録', new_user_registration_path %>をしてください</p>
+
+<% end %>
