--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
           <li><%= link_to "#{current_user.username}さん", user_path(current_user) %></li>
+          <li><%= link_to '会員情報を編集', edit_user_registration_path %></li>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         <% else %>
         <% end %>
@@ -24,31 +25,9 @@
 
 <% if user_signed_in? %>
 
-<p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice %></p>
 
-  <h1>Listing Homes</h1>
-
-  <table>
-    <thead>
-      <tr>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @homes.each do |home| %>
-        <tr>
-          <td><%= link_to 'Show', home %></td>
-          <td><%= link_to 'Edit', edit_home_path(home) %></td>
-          <td><%= link_to 'Destroy', home, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <br>
-
-  <%= link_to 'New Home', new_home_path %>
+  <h1>トップページ</h1>
 
 <% else %>
 
