--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -29,6 +29,9 @@
 
   <h1>トップページ</h1>
 
+  <h2>Review</h2>
+  <%= link_to 'Reviewを作成する', new_review_path %>
+
 <% else %>
 
   <p><%= link_to 'ログイン', new_user_session_path %>もしくは<%= link_to '会員登録', new_user_registration_path %>をしてください</p>
