--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -29,8 +29,18 @@
 
   <h1>トップページ</h1>
 
-  <h2>Review</h2>
+  <h2>Review一覧</h2>
   <%= link_to 'Reviewを作成する', new_review_path %>
+  <% @reviews.each do |review| %>
+    <div>
+      <%= link_to "#{review.user.username}さんのレビュー", review_path(review) %>
+      <%= review.name %>
+      <%= review.content %>
+      <% if review.user.id == current_user.id %>
+        <%= link_to 'レビューを削除', "/reviews/#{review.id}", method: :delete %>
+      <% end %>
+    </div>
+  <% end %>
 
 <% else %>
 
