--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -37,7 +37,8 @@
       <%= review.name %>
       <%= review.content %>
       <% if review.user.id == current_user.id %>
-        <%= link_to 'レビューを削除', "/reviews/#{review.id}", method: :delete %>
+        <%= link_to '編集', edit_review_path(review) %>
+        <%= link_to '削除', "/reviews/#{review.id}", method: :delete %>
       <% end %>
     </div>
   <% end %>
