--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -19,7 +19,8 @@
     <%= comment.user.username %>
     <%= comment.content %>
     <% if comment.user.id == current_user.id %>
-      <%= link_to 'コメントを削除', "/reviews/#{@review.id}/comments/#{comment.id}", method: :delete %>
+      <%= link_to '編集', edit_review_comment_path(@review, comment) %>
+      <%= link_to '削除', "/reviews/#{@review.id}/comments/#{comment.id}", method: :delete %>
     <% end %>
   </div>
 <% end %>
