reviews/showにlikeの見出しを追加した。

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -10,6 +10,8 @@
   <%= @review.content %>
 </div>
 
+<h2>Like</h2>
+
 <div id="like-button">
   <%= render partial: "likes/like", locals: { like: @review.likes.find_by(user_id: current_user.id), review: @review } %>
 </div>
