_like.html.erbをリファクタリングした。

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,6 +1,6 @@
 <% if review.like_user(current_user.id) %>
   <!-- reviewに対してされているlikeをcurrent_userがつけている場合 -->
-  <%= button_to review_like_path(review.id, like), method: :delete, id: "like-button", remote: true do %>
+  <%= button_to review_like_path(review, like), method: :delete, id: "like-button", remote: true do %>
     <%= image_tag("red-heart.png") %>
     <span>
       <%= review.likes_count %>
