homes/indexをリファクタリングした。

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -33,9 +33,10 @@
   <%= link_to 'Reviewを作成する', new_review_path %>
   <% @reviews.each do |review| %>
     <div>
-      <%= link_to "#{review.user.username}さんのレビュー", review_path(review) %>
+      <%= link_to "#{review.user.username}さん", user_path(review.user) %>
       <%= review.name %>
       <%= review.content %>
+      <%= link_to '詳細', review_path(review) %>
       <% if review.user.id == current_user.id %>
         <%= link_to '編集', edit_review_path(review) %>
         <%= link_to '削除', "/reviews/#{review.id}", method: :delete %>
