reviews/showをリファクタリングした。

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,8 @@
-<h1><%= @review.user.username %>さんのレビュー</h1>
+<h1>Review-<%= @review.id %></h1>
+
+<div>
+  <h2><%= @review.user.username %>さん</h2>
+</div>
 
 <div>
   <h2>Name</h2>
