--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,2 @@
 $("#like-button").html("<%= j(render partial: 'like', locals: { review: @review }) %>");
+$("#reviews-show-like-button").html("<%= j(render partial: 'like', locals: { review: @review }) %>");
