--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,2 +1,3 @@
 $("#like-button").html("<%= j(render partial: 'like', locals: { review: @review, like: @like }) %>");
 $("#reviews-show-like-button").html("<%= j(render partial: 'like', locals: { review: @review, like: @like }) %>");
+$("#users-show-like-button-" + <%= @review.id %>).html("<%= j(render partial: 'like', locals: { review: @review, like: @like }) %>");
