--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,6 +4,11 @@
 
   <h1>トップページ</h1>
 
+  <h2>User一覧</h2>
+  <% @users.each do |user| %>
+    <%= link_to "#{user.username}さん", user_path(user) %><br>
+  <% end %>
+
   <h2>Review一覧</h2>
   <%= link_to 'Reviewを作成する', new_review_path %>
   <% @reviews.each do |review| %>
