users/showにフォローボタンの部分テンプレートを追加した。

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+
+<%= render partial: "user_relationships/follow_form", locals: { user: @user } %>
+
 <% @reviews.each do |review| %>
   <%= review.name %><br>
   <%= review.content %><br>
