users/showに@userにフォローされているかどうかの表示を追加した。

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,10 @@
+<% unless @user.id == current_user.id %>
+  <% if @user.following?(current_user) %>
+    <p>あなたはフォローされています</p>
+  <% else %>
+    <p>あなたはフォローされていません</p>
+  <% end %>
+<% end %>
 
 <%= render partial: "user_relationships/follow_form", locals: { user: @user } %>
 
