users/showに@userが'フォローしている人数'と'フォローされている人数'の表示を追加した。

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,16 @@
 
 <%= render partial: "user_relationships/follow_form", locals: { user: @user } %>
 
+<h2>フォローされている人数</h2>
+<div id="followers">
+  <%= @user.followers.count %>
+</div>
+
+<h2>フォローしている人数</h2>
+<div>
+  <%= @user.following.count %>
+</div>
+
 <% @reviews.each do |review| %>
   <%= review.name %><br>
   <%= review.content %><br>
