--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<h1><%= @user.username %>さん</h1>
+
 <% unless @user.id == current_user.id %>
   <% if @user.following?(current_user) %>
     <p>あなたはフォローされています</p>
@@ -18,6 +20,7 @@
   <%= @user.following.count %>
 </div>
 
+<h2>Review一覧</h2>
 <% @reviews.each do |review| %>
   <%= review.name %><br>
   <%= review.content %><br>
