--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -45,6 +45,15 @@
           <%= link_to '詳細', review_path(h.item.review_id) %>
         </div>
       <% end %>
+    <% elsif h.item_type == "Like" %>
+      <% if h.item == nil %>
+      <!-- 何もしない -->
+      <% else %>
+        <div>
+          <%= h.created_at %>:<%= h.item.user.username %>が<%= h.item_type %>を<%= h.event %>しました
+          <%= link_to '詳細', review_path(h.item.review_id) %>
+        </div>
+      <% end %>
     <% end %>
   <% end %>
 
