--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -54,6 +54,14 @@
           <%= link_to '詳細', review_path(h.item.review_id) %>
         </div>
       <% end %>
+    <% else h.item_type == "UserRelationship" %>
+      <% if h.item == nil %>
+      <!-- 何もしない -->
+      <% else %>
+        <div>
+          <%= h.created_at %>:<%= h.item.follower.username %>が<%= h.item.followed.username %>をフォローしました
+        </div>
+      <% end %>
     <% end %>
   <% end %>
 
