--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -34,6 +34,13 @@
         <div>
           <%= h.created_at %>:<%= h.item.user.username %>が<%= h.item_type %>を<%= h.event %>しました
           <%= link_to '詳細', review_path(h.item.id) %>
+          <% if h.item.check_unread_review(current_user.id, h.item.id).empty? %>
+          <!-- 何も表示しない -->
+          <% else %>
+            <% if (h.item.check_unread_review(current_user.id, h.item.id)[0].checked_flag == true) %>
+              <span class="already-read">既読</span>
+            <% end %>
+          <% end %>
         </div>
       <% end %>
     <% elsif h.item_type == "Comment" %>
