--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -75,6 +75,13 @@
         <div>
           <%= h.created_at %>:<%= h.item.user.username %>が<%= h.item_type %>を<%= h.event %>しました
           <%= link_to '詳細', review_path(h.item.review_id) %>
+          <% if h.item.checked_unread_like(current_user.id, h.item.review_id, h.item.id).empty? %>
+          <!-- 何も表示しない -->
+          <% else %>
+            <% if (h.item.checked_unread_like(current_user.id, h.item.review_id, h.item.id)[0].checked_flag == true) %>
+              <span class="already-read">既読</span>
+            <% end %>
+          <% end %>
         </div>
       <% end %>
     <% else h.item_type == "UserRelationship" %>
