--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -35,65 +35,7 @@
     <% end %>
   </div>
 
-  <% @histories.each do |h| %>
-    <% if h.item_type == "Review" %>
-      <% if h.item == nil %>
-      <!-- 何もしない -->
-      <% else %>
-        <div>
-          <%= h.created_at %>:<%= h.item.user.username %>が<%= h.item_type %>を<%= h.event %>しました
-          <%= link_to '詳細', review_path(h.item.id) %>
-          <% if h.item.check_unread_review(current_user.id, h.item.id).empty? %>
-          <!-- 何も表示しない -->
-          <% else %>
-            <% if (h.item.check_unread_review(current_user.id, h.item.id)[0].checked_flag == true) %>
-              <span class="already-read">既読</span>
-            <% end %>
-          <% end %>
-        </div>
-      <% end %>
-    <% elsif h.item_type == "Comment" %>
-      <% if h.item == nil %>
-      <!-- 何もしない -->
-      <% else %>
-        <div>
-          <%= h.created_at %>:<%= h.item.user.username %>が<%= h.item_type %>を<%= h.event %>しました
-          <%= link_to '詳細', review_path(h.item.review_id) %>
-          <% if h.item.check_unread_comment(current_user.id, h.item.review_id, h.item.id).empty? %>
-          <!-- 何も表示しない -->
-          <% else %>
-            <% if (h.item.check_unread_comment(current_user.id, h.item.review_id, h.item.id)[0].checked_flag == true) %>
-              <span class="already-read">既読</span>
-            <% end %>
-          <% end %>
-        </div>
-      <% end %>
-    <% elsif h.item_type == "Like" %>
-      <% if h.item == nil %>
-      <!-- 何もしない -->
-      <% else %>
-        <div>
-          <%= h.created_at %>:<%= h.item.user.username %>が<%= h.item_type %>を<%= h.event %>しました
-          <%= link_to '詳細', review_path(h.item.review_id) %>
-          <% if h.item.checked_unread_like(current_user.id, h.item.review_id, h.item.id).empty? %>
-          <!-- 何も表示しない -->
-          <% else %>
-            <% if (h.item.checked_unread_like(current_user.id, h.item.review_id, h.item.id)[0].checked_flag == true) %>
-              <span class="already-read">既読</span>
-            <% end %>
-          <% end %>
-        </div>
-      <% end %>
-    <% else h.item_type == "UserRelationship" %>
-      <% if h.item == nil %>
-      <!-- 何もしない -->
-      <% else %>
-        <div>
-          <%= h.created_at %>:<%= h.item.follower.username %>が<%= h.item.followed.username %>をフォローしました
-        </div>
-      <% end %>
-    <% end %>
-  <% end %>
+  <%= render partial: "homes/update_history", locals: { histories: @histories } %>
 
 <% else %>
 
