--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
                 <%= @uncheck_histories.count %>
               </div>
               <% end %>
-              <a href="/check_history" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更新履歴<span class="caret"></span></a>
+              <a href="/check_history" class="dropdown-toggle" id="dropdown-update-history" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更新履歴<span class="caret"></span></a>
               <ul class="dropdown-menu" id="update-history-menu">
                 <li>
                   <div id="update-history">
