homes/indexの更新履歴のAjaxに関連するhtmlとcssをリファクタリングした。

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,11 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.update-history-title {
+.update-history-heading {
   position: relative;
 }
 
-#uncheck-number {
+#uncheck-number-homes-index {
   position: absolute;
   top: 4px;
   left: 125px;
