--- a/app/views/check_history/index.js.erb
+++ b/app/views/check_history/index.js.erb
@@ -2,5 +2,5 @@
 $('#update-history').html('<%= j(render partial: 'homes/update_history', locals: { histories: @histories }) %>');
 $('#update-history-number').hide();
 // homes/indexの更新履歴について
-$('#update-history-main').html('<%= j(render partial: 'homes/update_history', locals: { histories: @histories }) %>');
-$('#uncheck-number').hide();
+$('#update-history-homes-index').html('<%= j(render partial: 'homes/update_history', locals: { histories: @histories }) %>');
+$('#uncheck-number-homes-index').hide();
