navbarのidをclassにリファクタリングした。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               </div>
               <% end %>
               <a href="/check_history" class="dropdown-toggle" id="dropdown-update-history" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更新履歴<span class="caret"></span></a>
-              <ul class="dropdown-menu" id="update-history-menu">
+              <ul class="dropdown-menu update-history-menu-navbar">
                 <li>
                   <div id="update-history-navbar">
                     <%= render partial: "homes/update_history", locals: { histories: @histories } %>
